description to tiles && finish interactive Layer

--- a/src/editor/doc.html
+++ b/src/editor/doc.html
@@ -4,17 +4,26 @@
         <title>Game Editor Documentation</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            *   {font-family: Fira Mono Medium, monospace;
+                -webkit-font-smoothing: antialiased;
+                text-shadow: 1px 1px 1px rgba(0,0,0,0.004);}
+            h1  {color: #333333;
+                font-weight: bold}
+            h2  {}
+            p   {}
+        </style>
     </head>
     <body>
         <h1>Menu Item Descriptions</h1>
-        <h2>New...</h2>
+        <b><h2>New...</h2></b>
         <p>something wholesome</p>
         <h1>Menu Item Descriptions</h1>
         <h2>New...</h2>
         <p>something wholesome</p>
         <h1>Menu Item Descriptions</h1>
         <h2>New...</h2>
-        <p>something wholesome</p>
+        <p>something </p>
         <h1>Menu Item Descriptions</h1>
         <h2>New...</h2>
         <p>something wholesome</p><h1>Menu Item Descriptions</h1>
@@ -23,7 +32,7 @@
         <h1>Menu Item Descriptions</h1>
         <h2>New...</h2>
         <p>something wholesome</p>
-        
-        
+
+
     </body>
 </html>
