--- a/src/editor/doc.html
+++ b/src/editor/doc.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <h1>Menu Item Descriptions</h1>
-        <b><h2>New...</h2></b>
+        <h2>New...</h2>
         <p>something wholesome</p>
         <h1>Menu Item Descriptions</h1>
         <h2>New...</h2>
